bugfix: enabled fields by increasing their z-index

--- a/public/css/columns.css
+++ b/public/css/columns.css
@@ -150,6 +150,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 5;
   display: flex;
   flex-direction: column;
   align-items: center;
